--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -34,14 +34,14 @@ address:
   # longitude: '-122.1697'
 #directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
 #office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
+ # - 'Monday 10:00 to 13:00'
+ # - 'Wednesday 09:00 to 10:00'
 #appointment_url: 'https://calendly.com'
-contact_links:
-  - icon: twitter
-    icon_pack: fab
-    name: DM Me
-    link: 'https://twitter.com/Twitter'
+#contact_links:
+ # - icon: twitter
+  #  icon_pack: fab
+   # name: DM Me
+    #link: 'https://twitter.com/Twitter'
   #- icon: skype
    # icon_pack: fab
    # name: Skype Me
